--- a/sa-index-3.html
+++ b/sa-index-3.html
@@ -17,6 +17,12 @@
   <!-- Link: TailwindCSS & DaisyUI CDN -->
   <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css" rel="stylesheet" type="text/css" />
   <script src="https://cdn.tailwindcss.com"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+    integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
+    integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
+    crossorigin="anonymous"></script>
   <script>
     tailwind.config = {
       theme: {
@@ -37,9 +43,9 @@
 </head>
 
 <body class="font-lato">
-  <!-- navbar starts container mx-auto w-11/12 lg:w-10/12 -->
+  <!-- navbar starts -->
   <header>
-    <nav class="px-12">
+    <nav class="container mx-auto w-11/12">
       <div class="navbar lg:py-8">
         <div class="navbar-start gap-3 items-center">
           <img src="./assets/logo.webp" alt="">
@@ -53,7 +59,8 @@
           </ul>
         </div>
         <div class="navbar-end">
-          <img src="./assets/human.png" alt="">
+          <!-- <img src="./assets/human.png" alt=""> -->
+          <i class="fa-regular fa-user rounded-full border p-3"></i>
         </div>
       </div>
     </nav>
@@ -63,7 +70,7 @@
 
   <main>
     <!-- hero section starts-->
-    <section class="container mx-auto w-11/12 lg:w-10/12 mb-16">
+    <section class=" container mx-auto w-11/12 mb-16">
       <div class="hero">
         <div class="hero-content text-center">
           <div class="max-w-xl space-y-7">
@@ -84,16 +91,18 @@
     <!-- hero section ends-->
 
     <!-- adopt section starts -->
-    <section id="adopt-section">
-      <div class="hero ">
+    <section id="adopt-section" class="container mx-auto w-11/12 mb-5">
+      <div class="hero mb-5">
         <div class="hero-content text-center">
-          <div class="max-w-xl space-y-5">
-            <h1 class="text-3xl lg:text-5xl font-bold text-center">Adopt Your Best Friend</h1>
-            <p class="text-center">
-              Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda excepturi exercitationem
-              quasi. In deleniti eaque aut repudiandae et a id nisi.
-            </p>
-            <div class="flex justify-center gap-5">
+          <div class="max-w-xl space-y-10">
+            <div class="space-y-5">
+              <h1 class="text-3xl lg:text-5xl font-bold text-center">Adopt Your Best Friend</h1>
+              <p class="text-center">
+                Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda excepturi exercitationem
+                quasi. In deleniti eaque aut repudiandae et a id nisi.
+              </p>
+            </div>
+            <div class="flex flex-col lg:flex-row justify-center gap-5">
               <button id="dog" class="btn btn-primary">Dogs</button>
               <button id="cat" class="btn btn-primary">Cats</button>
               <button id="rabbit" class="btn btn-primary">Rabbits</button>
@@ -102,41 +111,61 @@
           </div>
         </div>
       </div>
-      <div class="flex justify-between items-center px-5 lg:px-10 py-5">
-        <h3 class="font-bold text-xs">Best Deal For You</h3>
+      <div class="flex justify-between items-center">
+        <h3 class="font-bold text-xl">Best Deal For You</h3>
         <button class="btn">Sort by Price</button>
       </div>
     </section>
-    <section id="" class="grid grid-cols-3 gap-5 p-5 mb-16">
+
+    <section id="" class="grid grid-cols-1 md:g lg:grid-cols-3 gap-5 mb-16 container mx-auto w-11/12">
       <!-- first div starts -->
-      <div id="pets" class="grid lg:col-span-2 lg:grid-cols-3 border border-stone-300 rounded-lg gap-y-5 px-2 py-4">
+      <div id="pets" class="lg:col-span-2 grid lg:grid-cols-3 border border-stone-200 rounded-xl p-2">
       </div>
       <!-- first div ends -->
 
       <!-- second div starts -->
-      <div id="liked-images" class=" border border-stone-300 rounded-lg gap-5 px-2 py-4"></div>
+      <div id="liked-images" class="grid lg:grid-cols-2 border border-stone-200 rounded-xl gap-5 p-2"></div>
       <!-- first div ends -->
     </section>
   </main>
 
   <!-- modal -->
   <!-- Open the modal using ID.showModal() method -->
-  <button id="showModalData" class="btn hidden" onclick="customModal.showModal()">open modal</button>
-  <dialog id="customModal" class="modal modal-bottom sm:modal-middle">
-    <div class="modal-box">
-      <div id="modal-container">
-      </div>
-      <div class="modal-action">
-        <form method="dialog">
-          <!-- if there is a button in form, it will close the modal -->
-          <button class="btn text-center">Close</button>
+  <!-- <section>
+    <button id="showModalData" class="btn hidden" onclick="customModal.showModal()">open modal</button>
+    <dialog id="customModal" class="modal modal-bottom sm:modal-middle p-3">
+      <div class="modal-box">
+        <div id="modal-container">
+        </div>
+        <div class="modal-action">
+          <form method="dialog">
+            <button
+              class="btn text-base hover:bg-primary hover:text-white transition-colors duration-200 ease-in-out">Close</button>
+        </div>
         </form>
       </div>
-    </div>
-  </dialog>
+      </div>
+    </dialog>
+  </section> -->
+
+  <!-- Modal Starts -->
+  <section>
+    <button id="showModalData" class="btn hidden" onclick="customModal.showModal()">open modal</button>
+    <dialog id="customModal" class="modal">
+      <form method="dialog" class="modal-box flex flex-col justify-center items-center space-y-5">
+        <div id="modal-container">
+
+        </div>
+        <!-- <button id="btn-continue"
+          class="btn w-full bg-gray-200 btn-md hover:bg-primary hover:text-white transition-colors ease-in duration-100 text-lg">Close
+          Confirmation</button> -->
+      </form>
+    </dialog>
+  </section>
+  <!-- Modal Ends -->
 
   <!-- footer section starts -->
-  <section class="bg-black px-16 py-12">
+  <section class="bg-black px-5 lg:px-16 py-12">
     <footer class="flex flex-col lg:flex-row justify-between space-y-12 lg:space-y-0">
       <nav class="space-y-5">
         <div class="flex gap-3 items-center">
@@ -185,3 +214,130 @@
 </body>
 
 </html>
+
+
+
+
+
+<!-- <div class="card card-compact bg-base-100 w-96 mx-auto shadow-xl p-5 space-y-3">
+  <div>
+    <img class="rounded-xl min-w-full" src=${pet.image} alt="" />
+  </div>
+  <div class="space-y-3">
+    <div class="space-y-2">
+      <h2 class="card-title">${pet.pet_name}</h2>
+      <div class="flex items-center gap-1">
+        <img src="./assets/frame1.png" alt="">
+        <p>Breed: ${pet.breed}</p>
+      </div>
+      <div class="flex items-center gap-1">
+        <img src="./assets/frame2.png" alt="">
+        <p>Birth: ${pet.date_of_birth}</p>
+      </div>
+      <div class="flex items-center gap-1">
+        <img src="./assets/frame3.png" alt="">
+        <p>Gender: ${pet.gender}</p>
+      </div>
+      <div class="flex items-center gap-1">
+        <img src="./assets/frame4.png" alt="">
+        <p>Price: ${pet.price}$</p>
+      </div>
+    </div>
+    <div class="card-actions justify-between gap-3">
+      <button onclick="loadImages(${pet.petId})" class="btn">Like</button>
+      <button class="btn">Adopt</button>
+      <button onclick="loadModalInfo(${pet.petId})" class="btn">Details</button>
+    </div>
+  </div>
+</div> -->
+
+
+<!-- <div class="">
+  <figure class="w-full relative">
+    <img src=${petData.image} alt="Pets" />
+  </figure>
+  <div class="">
+    <h2 class="card-title">${petData.pet_name}</h2>
+    <p>Breed: ${petData.breed}</p>
+    <p>Birth: ${petData.date_of_birth}</p>
+    <p>Gender: ${petData.gender}</p>
+    <p>Price: ${petData.price}</p>
+  </div>
+  <div class="">
+    <h2 class="text-xl font-bold">Details Information</h2>
+    <p>${petData.pet_details}</p>
+  </div>
+</div> -->
+
+<!-- <div class="p-3">
+  <div class="card shadow p-3">
+    <div class="px-3"><img src=${petData.image} class="rounded-xl" alt=""></div>
+    <div class="card-body">
+      <div class="space-y-2">
+        <h2 class="card-title">${petData.pet_name}</h2>
+        <div class="flex items-center gap-1">
+          <img src="./assets/frame1.png" alt="">
+          <p>Breed: ${petData.breed}</p>
+        </div>
+        <div class="flex items-center gap-1">
+          <img src="./assets/frame2.png" alt="">
+          <p>Birth: ${petData.date_of_birth}</p>
+        </div>
+        <div class="flex items-center gap-1">
+          <img src="./assets/frame3.png" alt="">
+          <p>Gender: ${petData.gender}</p>
+        </div>
+        <div class="flex items-center gap-1">
+          <img src="./assets/frame4.png" alt="">
+          <p>Price: ${petData.price}$</p>
+        </div>
+        <div class="">
+          <h2 class="text-xl font-bold">Details Information</h2>
+          <p>${petData.pet_details}</p>
+        </div>
+      </div>
+    </div>
+  </div> -->
+
+
+<!-- <div class="">
+  <div class="card space-y-5">
+    <div class="">
+      <img src=${petData.image} class="rounded-xl w-full" alt="">
+    </div>
+    <div>
+      <div class="space-y-1">
+        <h2 class="card-title">${petData.pet_name}</h2>
+        <div class="flex items-center gap-1">
+          <img src="./assets/frame1.png" alt="">
+          <p>Breed: ${petData.breed}</p>
+        </div>
+        <div class="flex items-center gap-1">
+          <img src="./assets/frame2.png" alt="">
+          <p>Birth: ${petData.date_of_birth}</p>
+        </div>
+        <div class="flex items-center gap-1">
+          <img src="./assets/frame3.png" alt="">
+          <p>Gender: ${petData.gender}</p>
+        </div>
+        <div class="flex items-center gap-1">
+          <img src="./assets/frame4.png" alt="">
+          <p>Price: ${petData.price}$</p>
+        </div>
+      </div>
+    </div>
+    <div>
+      <div class="text-justify space-y-2">
+        <h2 class="text-xl font-bold">Details Information</h2>
+        <p>${petData.pet_details}</p>
+      </div>
+    </div>
+    <div>
+      <button
+        class="btn w-full bg-gray-200 btn-md hover:bg-primary hover:text-white transition-colors ease-in duration-100 text-lg">Close</button>
+    </div>
+  </div> -->
+
+<!-- <div class="p-3 rounded-xl">
+  <img class="h-[200px] w-[300px]" src=${petData.image} alt="Pets" />
+</div> -->
