added edit some button and user icon color

--- a/index.html
+++ b/index.html
@@ -58,26 +58,26 @@
               </svg>
             </div>
             <ul tabindex="0"
-              class="menu font-bold menu-sm dropdown-content bg-base-100 rounded-box z-[1] mt-3 w-52 p-2 shadow">
+              class="menu menu-sm dropdown-content bg-base-100 rounded-box z-[1] mt-3 w-52 p-2 shadow">
               <li><a>Home</a></li>
               <li><a>Shop</a></li>
               <li><a>Contact</a></li>
             </ul>
           </div>
-          <div class="flex items-center gap-2 text-xl lg:text-2xl font-bold">
+          <div class="flex items-center gap-2 text-xl lg:text-2xl font-extrabold cursor-default">
             <img class="w-5" src="./assets/logo.webp" alt="">
             <h1>Peddy</h1>
           </div>
         </div>
         <div class="navbar-center hidden lg:flex">
-          <ul class="menu menu-horizontal px-1 font-bold">
+          <ul class="menu menu-horizontal px-1">
             <li><a>Home</a></li>
             <li><a>Shop</a></li>
             <li><a>Contact</a></li>
           </ul>
         </div>
-        <div class="navbar-end">
-          <i class="fa-regular fa-user rounded-full border p-3"></i>
+        <div class="navbar-end cursor-default">
+          <i class="fa-regular fa-user rounded-full border border-[#0E7A81] p-3"></i>
         </div>
       </div>
     </nav>
@@ -146,7 +146,7 @@
   <!-- First modal starts -->
   <section>
     <button id="showModalInfo" class="btn hidden" onclick="customModalBox.showModal()"></button>
-    <dialog id="customModalBox" class="modal modal-bottom sm:modal-middle p-3">
+    <dialog id="customModalBox" class="modal modal-bottom sm:modal-middle p-4">
       <form method="dialog" class="modal-box flex flex-col justify-center items-center space-y-5">
         <div id="modal-containers">
         </div>
@@ -162,7 +162,7 @@
           <h3 class="text-lg md:text-3xl lg:text-3xl font-bold">Congrats!</h3>
           <p class="py-4 lg:text-lg">You Have Adopted</p>
           <!-- Countdown -->
-          <span class="countdown font-mono text-4xl" id="countdown"></span>
+          <span class="countdown font-mono text-4xl font-extrabold" id="countdown"></span>
         </div>
       </form>
     </dialog>
@@ -175,7 +175,7 @@
       <nav class="space-y-5">
         <div class="flex gap-3 items-center">
           <img src="./assets/logo.webp" alt="">
-          <a class="text-3xl font-extrabold text-white">Peddy</a>
+          <a class="text-2xl lg:text-3xl font-extrabold text-white">Peddy</a>
         </div>
         <ul class="text-stone-300 space-y-1.5">
           <li><a>Location: av. Washington 165, NY CA </a></li>
