added loading spinner in center and other html and js little edits

--- a/index.html
+++ b/index.html
@@ -57,8 +57,7 @@
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h8m-8 6h16" />
               </svg>
             </div>
-            <ul tabindex="0"
-              class="menu menu-sm dropdown-content bg-base-100 rounded-box z-[1] mt-3 w-52 p-2 shadow">
+            <ul tabindex="0" class="menu menu-sm dropdown-content bg-base-100 rounded-box z-[1] mt-3 w-52 p-2 shadow">
               <li><a>Home</a></li>
               <li><a>Shop</a></li>
               <li><a>Contact</a></li>
@@ -95,12 +94,10 @@
               <img src="./assets/fire.png" alt="">
             </div>
             <h1 class="font-extrabold text-2xl my-5 lg:text-5xl">Your Path to Adoption Starts Here</h1>
-            <p>Pet adoption is the process of taking responsibility for a pet that was previously owned by
-              someone else. Common sources for adoptable pets are animal shelters, rescue groups, and
-              allowing these animals to find loving homes. Adopting a pet saves lives and brings joy and
-              companionship to families.</p>
-            <button class="btn bg-[#0E7A81] text-white my-7 md:px-5 lg:px-7"><a href="#adopt-pet-section">View
-                More</a></button>
+            <p>Pet adoption is the process of taking responsibility for a pet that was previously owned by someone else. Adopting a pet saves lives and brings joy and companionship to families.</p>
+            <button class="btn bg-[#0E7A81] text-white my-7 md:px-5 lg:px-7"
+              onclick="document.location='#adopt-pet-section'">View
+              More</button>
             <img src="./assets/pet.webp" alt="">
           </div>
         </div>
@@ -108,24 +105,23 @@
     </section>
     <!-- Hero section ends-->
     <!-- Adopt section starts -->
-    <section id="adopt-pet-section" class="container mx-auto w-11/12 space-y-10">
+    <section id="adopt-pet-section" class="container mx-auto w-11/12">
       <div class="hero mb-5">
         <div class="hero-content text-center">
-          <div class="max-w-xl space-y-10">
+          <div class="max-w-xl">
             <div class="space-y-5">
               <h1 class="text-3xl lg:text-5xl font-bold text-center">Adopt Your Best Friend</h1>
-              <p class="text-center">Bringing a pet into your home means gaining a loyal companion who
-                will enrich your life with love and joy. Whether it's a playful puppy or a cuddly
-                kitten, adopting a pet not only saves a life but also creates a lasting bond.</p>
+              <p class="text-center">Bringing a pet into your home means gaining a loyal companion who will enrich your life with love and joy. Whether it's a playful puppy or a cuddly kitten, adopting a pet saves a life and creates a lasting bond.</p>
             </div>
           </div>
         </div>
       </div>
       <!-- four category button -->
-      <div id="btn-container" class="flex flex-col md:flex-row lg:flex-row justify-center mx-auto gap-5 lg:gap-16">
+      <div id="btn-container"
+        class="flex flex-col md:flex-row lg:flex-row justify-center mx-auto gap-5 lg:gap-16 mb-10">
       </div>
       <!-- Sorting div -->
-      <div class="flex justify-between items-center px-2 py-5">
+      <div class="flex justify-between items-center px-2 py-3">
         <h3 class="font-bold text-lg lg:text-xl">Best Deal For You</h3>
         <button id="sorting" class="btn bg-bgPrimary text-base text-white">Sort by Price</button>
       </div>
