added loading spinner in center and other html and js edit

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
           </div>
         </div>
       </div>
-      <!-- four category button -->
+      <!-- Four category button -->
       <div id="btn-container"
         class="flex flex-col md:flex-row lg:flex-row justify-center mx-auto gap-5 lg:gap-16 mb-10">
       </div>
