added border color

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
           </ul>
         </div>
         <div class="navbar-end cursor-default">
-          <i class="fa-regular fa-user rounded-full border border-[#0E7A81] p-3"></i>
+          <i class="fa-regular fa-user rounded-full border p-3"></i>
         </div>
       </div>
     </nav>
