--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
   <section>
     <button id="showModalInfo" class="btn hidden" onclick="customModalBox.showModal()"></button>
     <dialog id="customModalBox" class="modal modal-bottom sm:modal-middle p-4">
-      <form method="dialog" class="modal-box flex flex-col justify-center items-center space-y-5">
+      <form method="dialog" class="modal-box flex flex-col items-center space-y-5 rounded-lg">
         <div id="modal-containers">
         </div>
       </form>
