added some modifications to the details model

--- a/index.html
+++ b/index.html
@@ -94,7 +94,8 @@
               <img src="./assets/fire.png" alt="">
             </div>
             <h1 class="font-extrabold text-2xl my-5 lg:text-5xl">Your Path to Adoption Starts Here</h1>
-            <p>Pet adoption is the process of taking responsibility for a pet that was previously owned by someone else. Adopting a pet saves lives and brings joy and companionship to families.</p>
+            <p>Pet adoption is the process of taking responsibility for a pet that was previously owned by someone else.
+              Adopting a pet saves lives and brings joy and companionship to families.</p>
             <button class="btn bg-[#0E7A81] text-white my-7 md:px-5 lg:px-7"
               onclick="document.location='#adopt-pet-section'">View
               More</button>
@@ -111,7 +112,9 @@
           <div class="max-w-xl">
             <div class="space-y-5">
               <h1 class="text-3xl lg:text-5xl font-bold text-center">Adopt Your Best Friend</h1>
-              <p class="text-center">Bringing a pet into your home means gaining a loyal companion who will enrich your life with love and joy. Whether it's a playful puppy or a cuddly kitten, adopting a pet saves a life and creates a lasting bond.</p>
+              <p class="text-center">Bringing a pet into your home means gaining a loyal companion who will enrich your
+                life with love and joy. Whether it's a playful puppy or a cuddly kitten, adopting a pet saves a life and
+                creates a lasting bond.</p>
             </div>
           </div>
         </div>
