added some modifications to the second modal

--- a/index.html
+++ b/index.html
@@ -156,10 +156,10 @@
   <!-- Second modal starts -->
   <section>
     <dialog id="congratsModal" class="modal">
-      <form method="dialog" class="modal-box flex flex-col justify-center items-center text-center space-y-5">
+      <form method="dialog" class="modal-box md:w-[400px] lg:w-[400px] flex flex-col justify-center items-center text-center space-y-5">
         <div id="modal-containers">
-          <h3 class="text-lg md:text-3xl lg:text-3xl font-bold">Congrats!</h3>
-          <p class="py-4 lg:text-lg">You Have Adopted</p>
+          <h3 class="text-3xl lg:text-4xl font-extrabold">Congrats!</h3>
+          <p class="py-4 lg:text-lg">The Adoption Process is Start For your Pet</p>
           <!-- Countdown -->
           <span class="countdown font-mono text-4xl font-extrabold" id="countdown"></span>
         </div>
